Feat(eos_cli_config_gen): Support for configuring logging level facilities (#3944)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/logging.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/logging.j2
@@ -69,6 +69,16 @@
 {%             endif %}
 {%         endfor %}
 {%     endif %}
+{%     if logging.level is arista.avd.defined %}
+
+| Facility | Severity |
+| -------- | -------- |
+{%         for level in logging.level | arista.avd.natural_sort('facility') %}
+{%             if level.severity is arista.avd.defined %}
+| {{ level.facility }} | {{ level.severity }} |
+{%             endif %}
+{%         endfor %}
+{%     endif %}
 {%     if logging.facility is arista.avd.defined %}
 
 **Syslog facility value:** {{ logging.facility }}
