Address multiple comments.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-telemetry-postcard-policy.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-telemetry-postcard-policy.j2
@@ -5,48 +5,50 @@
 #}
 {# doc - monitor telemetry postcard policy #}
 {% if monitor_telemetry_postcard_policy is arista.avd.defined %}
+
+### Monitor Telemetry Postcard Policy
 {%     if monitor_telemetry_postcard_policy.sample_policies is arista.avd.defined %}
 
-### Sample Policy Summary
+#### Sample Policy Summary
 {%         for policy in monitor_telemetry_postcard_policy.sample_policies | arista.avd.natural_sort("name") %}
 
-#### {{ policy.name }}
+##### {{ policy.name }}
 {%             if policy.match_rules is arista.avd.defined %}
 
-##### Match rules
+###### Match rules
 
 | Rule Name | Rule Type | Source Prefix | Destination Prefix | Protocol | Source Ports | Destination Ports |
 | --------- | --------- | ------------- | ------------------ | -------- | ------------ | ----------------- |
 {%                 for rule in policy.match_rules | arista.avd.natural_sort("name") %}
-{%                     set protocol = [] %}
+{%                     set protocols_list = [] %}
 {%                     set destination_ports = [] %}
 {%                     set source_ports = [] %}
-{%                     for port in rule.ports | arista.avd.natural_sort("protocol") %}
-{%                         do protocol.append(port.protocol) %}
-{%                         if port.source_ports is arista.avd.defined %}
-{%                             do source_ports.append(port.source_ports | join(", ")) %}
+{%                     for protocol in rule.protocols | arista.avd.natural_sort("protocol") %}
+{%                         do protocols_list.append(protocol.protocol) %}
+{%                         if protocol.source_ports is arista.avd.defined %}
+{%                             do source_ports.append(protocol.source_ports | join(", ")) %}
 {%                         else %}
 {%                             do source_ports.append("-") %}
 {%                         endif %}
-{%                         if port.destination_ports is arista.avd.defined %}
-{%                             do destination_ports.append(port.destination_ports | join(", ")) %}
+{%                         if protocol.destination_ports is arista.avd.defined %}
+{%                             do destination_ports.append(protocol.destination_ports | join(", ")) %}
 {%                         else %}
 {%                             do destination_ports.append("-") %}
 {%                         endif %}
 {%                     endfor %}
-{%                     if protocol == [] %}
-{%                         do protocol.append("-") %}
+{%                     if protocols_list == [] %}
+{%                         do protocols_list.append("-") %}
 {%                         do source_ports.append("-") %}
 {%                         do destination_ports.append("-") %}
 {%                     endif %}
-| {{ rule.name }} | {{ rule.type }} | {{ rule.source_prefix | arista.avd.default("-") }} | {{ rule.destination_prefix | arista.avd.default("-") }} | {{ protocol | join("<br>") }} | {{ source_ports | join("<br>") }} | {{ destination_ports | join("<br>") }} |
+| {{ rule.name }} | {{ rule.type }} | {{ rule.source_prefix | arista.avd.default("-") }} | {{ rule.destination_prefix | arista.avd.default("-") }} | {{ protocols_list | join("<br>") }} | {{ source_ports | join("<br>") }} | {{ destination_ports | join("<br>") }} |
 {%                 endfor %}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.profiles is arista.avd.defined %}
 
-### Telemetry Postcard Policy Profiles
+#### Telemetry Postcard Policy Profiles
 
 | Profile Name | Ingress Sample Policy |
 | ------------ | --------------------- |
@@ -55,7 +57,7 @@
 {%         endfor %}
 {%     endif %}
 
-### Monitor Telemetry Postcard Configuration
+#### Monitor Telemetry Postcard Configuration
 
 ```eos
 {%     include 'eos/monitor-telemetry-postcard-policy.j2' %}
