--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-copp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-copp.j2
@@ -4,19 +4,16 @@
  that can be found in the LICENSE file.
 #}
 {# eos - policy map copp #}
-{% if policy_maps.copp is arista.avd.defined %}
-{%     if policy_maps.copp.name is arista.avd.defined %}
+{% if policy_maps.copp.enable is arista.avd.defined %}
 !
-policy-map type copp {{ policy_maps.copp.name }}
-{%         if policy_maps.copp.classes is arista.avd.defined %}
-{%             for class in policy_maps.copp.classes | arista.avd.natural_sort("name") %}
-{%                 if class.name is arista.avd.defined %}
+policy-map type copp copp-system-policy
+{%     for class in policy_maps.copp.classes | arista.avd.natural_sort("name") %}
    class {{ class.name }}
-{%                 endif %}
-{%                 if class.shape is arista.avd.defined %}
+{%         if class.shape is arista.avd.defined %}
       shape pps {{ class.shape }}
-{%                 endif %}
-{%             endfor %}
 {%         endif %}
-{%     endif %}
+{%         if class.bandwidth is arista.avd.defined %}
+      bandwidth pps {{ class.bandwidth }}
+{%         endif %}
+{%     endfor %}
 {% endif %}
