--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -281,6 +281,8 @@
 {% include 'eos/router-multicast.j2' %}
 {# router general configuration #}
 {% include 'eos/router-general.j2' %}
+{# router segment-security #}
+{% include 'eos/router-segment-security.j2' %}
 {# router traffic-engineering configuration #}
 {% include 'eos/router-traffic-engineering.j2' %}
 {# router ospf configuration #}
