fixing doc template logic

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
@@ -140,15 +140,9 @@
 | ----------- | ---------------- | ----------------- | -------- |
 {%             for secret in profile.secrets | arista.avd.natural_sort("name") %}
 {%                 set local_time = "Local Time" if secret.local_time is arista.avd.defined(true) %}
-{%                 if secret.receive_lifetime.infinite is arista.avd.defined and secret.transmit_lifetime.infinite is arista.avd.defined %}
-| {{ secret.name }} | Infinite | Infinite | {{ local_time | arista.avd.default("UTC") }} |
-{%                 elif secret.receive_lifetime.infinite is arista.avd.defined and secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
-| {{ secret.name }} | Infinite | {{ secret.transmit_lifetime.start_date_time }} - {{ secret.transmit_lifetime.end_date_time }} | {{ local_time | arista.avd.default("UTC") }} |
-{%                 elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined and secret.transmit_lifetime.infinite is arista.avd.defined %}
-| {{ secret.name }} | {{ secret.receive_lifetime.start_date_time }} - {{ secret.receive_lifetime.end_date_time }} | Infinite | {{ local_time | arista.avd.default("UTC") }} |
-{%                 elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined and secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
-| {{ secret.name }} | {{ secret.receive_lifetime.start_date_time }} - {{ secret.receive_lifetime.end_date_time }} | {{ secret.transmit_lifetime.start_date_time }} - {{ secret.transmit_lifetime.end_date_time }} | {{ local_time | arista.avd.default("UTC") }} |
-{%                 endif %}
+{%                 set receive_lifetime = "Infinite" if secret.receive_lifetime.infinite is arista.avd.defined(true) else secret.receive_lifetime.start_date_time ~ " - " ~ secret.receive_lifetime.end_date_time %}
+{%                 set transmit_lifetime = "Infinite" if secret.transmit_lifetime.infinite is arista.avd.defined(true) else secret.transmit_lifetime.start_date_time ~ " - " ~ secret.transmit_lifetime.end_date_time %}
+| {{ secret.name }} | {{ receive_lifetime }} | {{ transmit_lifetime }} | {{ local_time | arista.avd.default("UTC") }} |
 {%             endfor %}
 {%         endfor %}
 {%     endif %}
