--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/policy-maps-copp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/policy-maps-copp.j2
@@ -4,19 +4,19 @@
  that can be found in the LICENSE file.
 #}
 {# doc - policy map copp #}
-{% if policy_maps.copp.enable is arista.avd.defined %}
+{% if policy_maps.copp_system_policy.enable is arista.avd.defined %}
 
 ### Control-plane Policy Map
 
 #### Control-plane Policy Map Summary
-{%     if policy_maps.copp.classes is arista.avd.defined %}
+{%     if policy_maps.copp_system_policy.classes is arista.avd.defined %}
 
 ##### copp-system-policy
 
-| Class | Shape(pps) | Bandwidth(pps) |
-| ----- | ---------- | -------------- |
-{%         for class in policy_maps.copp.classes | arista.avd.natural_sort('name') %}
-| {{ class.name }} | {{ class.shape | arista.avd.default("-") }} | {{ class.minimum_bandwidth | arista.avd.default("-") }} |
+| Class | Shape | Bandwidth | Rate Unit |
+| ----- | ----- | --------- | --------- |
+{%         for class in policy_maps.copp_system_policy.classes | arista.avd.natural_sort('name') %}
+| {{ class.name }} | {{ class.shape | arista.avd.default("-") }} | {{ class.bandwidth | arista.avd.default("-") }} | {{ class.rate_unit }} |
 {%         endfor %}
 {%     endif %}
 
