--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-copp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-copp.j2
@@ -4,16 +4,18 @@
  that can be found in the LICENSE file.
 #}
 {# eos - policy map copp #}
-{% if policy_maps.copp.enable is arista.avd.defined %}
+{% if policy_maps.copp_system_policy.enable is arista.avd.defined %}
 !
 policy-map type copp copp-system-policy
-{%     for class in policy_maps.copp.classes | arista.avd.natural_sort("name") %}
+{%     for class in policy_maps.copp_system_policy.classes | arista.avd.natural_sort("name") %}
    class {{ class.name }}
-{%         if class.shape is arista.avd.defined %}
-      shape pps {{ class.shape }}
-{%         endif %}
-{%         if class.bandwidth is arista.avd.defined %}
-      bandwidth pps {{ class.bandwidth }}
+{%         if class.rate_unit is arista.avd.defined %}
+{%             if class.shape is arista.avd.defined %}
+      shape {{ class.rate_unit }} {{ class.shape }}
+{%             endif %}
+{%             if class.bandwidth is arista.avd.defined %}
+      bandwidth {{ class.rate_unit }} {{ class.bandwidth }}
+{%             endif %}
 {%         endif %}
 {%     endfor %}
 {% endif %}
