Adding empty line character.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-copp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-copp.j2
@@ -17,5 +17,8 @@ policy-map type copp copp-system-policy
       bandwidth {{ class.rate_unit }} {{ class.bandwidth }}
 {%             endif %}
 {%         endif %}
+{%         if not loop.last %}
+   !
+{%         endif %}
 {%     endfor %}
 {% endif %}
