--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -161,6 +161,8 @@
 {% include 'eos/link-tracking-groups.j2' %}
 {# CVX #}
 {% include 'eos/cvx.j2' %}
+{# influxDB Telemetry #}
+{% include 'eos/monitor-telemetry-influx.j2' %}
 {# IP Security #}
 {% include 'eos/ip-security.j2' %}
 {# Port-Channel Interfaces #}
