--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
@@ -12,7 +12,7 @@ monitor telemetry postcard policy
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.ingress.sample.rate is arista.avd.defined %}
    ingress sample rate {{ monitor_telemetry_postcard_policy.ingress.sample.rate }}
-{%     elif monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask is arista.avd.defined %}
+{%     elif monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask is arista.avd.defined %}
    ingress sample tcp-udp-checksum value {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value }} mask {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask }}
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.vxlan_marking_bit is arista.avd.defined %}
