--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-layer1.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-layer1.j2
@@ -11,8 +11,8 @@
 | Layer 1 Event | Logging |
 | ------------- | ------- |
 | MAC fault | {{ monitor_layer1.logging_mac_fault | arista.avd.default(false) }} |
-| Transceiver DOM | {{ monitor_layer1.logging_transceiver.dom | arista.avd.default(false) }} |
-| Transceiver communication | {{ monitor_layer1.logging_transceiver.communication | arista.avd.default(false) }} |
+| Transceiver DOM | {{ monitor_layer1.logging_transceiver.dom | arista.avd.default(false) or monitor_layer1.logging_transceiver.dom_and_communication | arista.avd.default(false) }} |
+| Transceiver communication | {{ monitor_layer1.logging_transceiver.communication | arista.avd.default(false) or monitor_layer1.logging_transceiver.dom_and_communication | arista.avd.default(false) }} |
 
 ### Monitor Layer 1 Device Configuration
 
