--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-layer1.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-layer1.j2
@@ -9,14 +9,15 @@
 monitor layer1
 {%     if monitor_layer1.logging_transceiver.dom_and_communication is arista.avd.defined(true) %}
    logging transceiver
-{%     endif %}
-{%     if monitor_layer1.logging_transceiver.dom is arista.avd.defined(true) %}
+{%     else %}
+{%         if monitor_layer1.logging_transceiver.dom is arista.avd.defined(true) %}
    logging transceiver dom
-{%     endif %}
-{%     if monitor_layer1.logging_transceiver.communication is arista.avd.defined(true) %}
+{%         endif %}
+{%         if monitor_layer1.logging_transceiver.communication is arista.avd.defined(true) %}
    logging transceiver communication
-{%     endif %}
-{%     if monitor_layer1.logging_mac_fault is arista.avd.defined(true) %}
+{%         endif %}
+{%         if monitor_layer1.logging_mac_fault is arista.avd.defined(true) %}
    logging mac fault
+{%         endif %}
 {%     endif %}
 {% endif %}
