--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -681,12 +681,10 @@ router bgp {{ router_bgp.as }}
 {%         if router_bgp.address_family_evpn.route.export_ethernet_segment_ip_mass_withdraw is arista.avd.defined(true) %}
       route export ethernet-segment ip mass-withdraw
 {%         endif %}
-{%         if router_bgp.address_family_evpn.layer_2_fec_in_place_update.enabled is arista.avd.defined(true) %}
-{%             if router_bgp.address_family_evpn.layer_2_fec_in_place_update.timeout is arista.avd.defined %}
+{%         if router_bgp.address_family_evpn.layer_2_fec_in_place_update.timeout is arista.avd.defined %}
       layer-2 fec in-place update timeout {{ router_bgp.address_family_evpn.layer_2_fec_in_place_update.timeout }} seconds
-{%             else %}
+{%         elif router_bgp.address_family_evpn.layer_2_fec_in_place_update.enabled is arista.avd.defined(true) %}
       layer-2 fec in-place update
-{%             endif %}
 {%         endif %}
 {%         if router_bgp.address_family_evpn.route.import_overlay_index_gateway is arista.avd.defined(true) %}
       route import overlay-index gateway
