Fixing schema and template.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/policy-maps-copp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/policy-maps-copp.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# doc - policy map copp #}
-{% if policy_maps.copp_system_policy.enable is arista.avd.defined %}
+{% if policy_maps.copp_system_policy is arista.avd.defined %}
 
 ### Control-plane Policy Map
 
