--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-layer1.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-layer1.j2
@@ -7,15 +7,14 @@
 {% if monitor_layer1.enabled is arista.avd.defined(true) %}
 !
 monitor layer1
-{%     if monitor_layer1.logging_transceiver.dom_and_communication is arista.avd.defined(true) %}
+{%     if monitor_layer1.logging_transceiver.enabled is arista.avd.defined(true) %}
    logging transceiver
-{%     else %}
-{%         if monitor_layer1.logging_transceiver.dom is arista.avd.defined(true) %}
+{%     endif %}
+{%     if monitor_layer1.logging_transceiver.dom is arista.avd.defined(true) %}
    logging transceiver dom
-{%         endif %}
-{%         if monitor_layer1.logging_transceiver.communication is arista.avd.defined(true) %}
+{%     endif %}
+{%     if monitor_layer1.logging_transceiver.communication is arista.avd.defined(true) %}
    logging transceiver communication
-{%         endif %}
 {%     endif %}
 {%     if monitor_layer1.logging_mac_fault is arista.avd.defined(true) %}
    logging mac fault
